2011-07-10  Robert Larice
 * src/frontend/wdisp/windisp.c :
  SetWindowLongPtr() and SetClassLongPtr() for 64bit compatibility

2011-07-09  Holger Vogt
 * input.c: definition of _read only for Windows console

2011-07-09  Robert Larice
 * src/frontend/gens.c ,
 * src/frontend/subckt.c ,
 * src/frontend/numparam/xpressn.c ,
 * src/maths/sparse/spfactor.c ,
 * src/spicelib/parser/inpgtok.c ,
 * src/xspice/cm/cm.c :
   explicit `int' casts for some ptrdiff_t expressions, where an `int' seems to be big enough

2011-07-09  Robert Larice
 * src/ngsconvert.c ,
 * src/misc/misc_time.c :
   some explicit `int' casts

2011-07-09  Robert Larice
 * src/spicelib/devices/ltra/ltraacld.c ,
 * src/frontend/trannoise/1-f-code.c :
   some long versus int type fixes

2011-07-09  Robert Larice
 * src/frontend/com_fft.c :
   possibly inexact long -> double cast

2011-07-09  Robert Larice
 * src/frontend/inpcom.c ,
 * src/frontend/numparam/spicenum.c ,
 * src/frontend/numparam/xpressn.c' :
   remove unused global artifact `dynLlen'

2011-07-09  Robert Larice
 * src/frontend/com_sysinfo.c ,
 * src/winmain.c :
   cleanup integer type conversions

2011-07-09  Robert Larice
 * src/ngsconvert.c ,
 * src/frontend/inp.c ,
 * src/frontend/nutinp.c ,
 * src/frontend/outitf.c ,
 * src/frontend/help/readhelp.c :
   cleanup fseek() usage

2011-07-08  Holger Vogt
 * display.c: replace error message by appropriate warning, if compiled
   as console application under MS Windows

2011-07-04  Holger Vogt
 * input.c: add ssize_t as SSIZE_T for MS Visual Studio

2011-07-03  Holger Vogt
 * main.c: remove reference to 'oflag'
 * ngspice.h: NaN definition for MS VS

2011-07-03  Robert Larice
 * man/man1/ngnutmeg.1 ,
 * man/man1/ngspice.1 :
   spelling fixes from debian `ngspice_23-1.debian.tar.gz', thank you !

2011-07-03  Robert Larice
 * configure.ac :
   enable -Wconversion
     remove -Wimplicit-function-declaration since its implicit in -Wall