@@ -1,6 +1,11 @@
 2011-07-10  Robert Larice
+ * src/winmain.c ,
+ * src/frontend/wdisp/winprint.c :
+   cleanup integer type conversions
+
+2011-07-10  Robert Larice
  * src/frontend/wdisp/windisp.c :
-  SetWindowLongPtr() and SetClassLongPtr() for 64bit compatibility
+   SetWindowLongPtr() and SetClassLongPtr() for 64bit compatibility
 
 2011-07-09  Holger Vogt
  * input.c: definition of _read only for Windows console
